@@ -1,7 +1,7 @@
 //
 // CipherKey.cpp
 //
-// $Id: //poco/1.3/Crypto/src/CipherKey.cpp#2 $
+// $Id: //poco/1.3/Crypto/src/CipherKey.cpp#3 $
 //
 // Library: Crypto
 // Package: Cipher
@@ -41,19 +41,14 @@ namespace Poco {
 namespace Crypto {
 
 
-CipherKey::CipherKey(const std::string& name, 
-	const std::string& passphrase, 
-	const std::string& salt,
-	int iterationCount):
-		_pImpl(new CipherKeyImpl(name, passphrase, salt, iterationCount))
+CipherKey::CipherKey(const std::string& name, const std::string& passphrase,  const std::string& salt, int iterationCount):
+	_pImpl(new CipherKeyImpl(name, passphrase, salt, iterationCount))
 {
 }
 
 
-CipherKey::CipherKey(const std::string& name, 
-	const ByteVec& key, 
-	const ByteVec& iv):
-		_pImpl(new CipherKeyImpl(name, key, iv))
+CipherKey::CipherKey(const std::string& name, const ByteVec& key, const ByteVec& iv):
+	_pImpl(new CipherKeyImpl(name, key, iv))
 {
 }
 
