@@ -196,6 +196,9 @@ Release 1.4.0 (2010-11-??)
   Poco::UUID::null() and Poco::UUID::isNull(), respectively, to avoid
   issues with Objective-C++ projects on Mac OS X and iOS where nil is
   a system-provided macro.
+- Crypto bugfixes: RSACipherImpl now pads every block of data, not just the 
+  last (or last two).
+- Improved Crypto testsuite by adding new tests
 
 
 Release 1.3.6p2 (2010-01-15)
@@ -1377,4 +1380,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.3/dist/CHANGELOG#133 $
+$Id: //poco/1.3/dist/CHANGELOG#134 $
